Добавляет хедер и футер на странице index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,56 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
+
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <header>
+      <nav>
+        <a>
+          <img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип Седона">
+        </a>
+        <ul>
+          <li><a href="#">Информация</a></li>
+          <li><a href="#">Фото и видео</a></li>
+          <li><a href="#">Карта штата</a></li>
+          <li><a href="#">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      
+    </main>
+
+    <footer>
+      <section>
+        <h2>Как с нами связаться</h2>
+        <p>
+          #visitsedona<br>
+          Тел: <a href="tel:+74956660166">+7(495) 666-01-66</a>
+        </p>
+      </section>
+      <section>
+        <h2>Социальные сети</h2>
+        <ul>
+          <li>
+            <a href="#">Твиттер</a>
+          </li>
+          <li>
+            <a href="#">Фейсбук</a>
+          </li>
+          <li>
+            <a href="#">Ютуб</a>
+          </li>
+        </ul>
+      </section>
+      <p>
+        Website by
+        <a href="https://htmlacademy.ru">
+          <img src="https://via.placeholder.com/115x41" width="115" height="41" alt="Логотип HTML Academy">
+        </a>
+      </p>
+    </footer>
 
   </body>
 </html>
