Исправляет разметку главной страницы

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
 
     <header>
+      <h1>Добро пожаловать в Седону</h1>
+
       <nav>
         <a>
           <img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип Седона">
@@ -19,76 +21,83 @@
           <li><a href="catalog.html">Гостиницы</a></li>
         </ul>
       </nav>
-    </header>
-
-    <main>
-      <h1>Добро пожаловать в Седону</h1>
 
       <div>
         <h2>Приветствие</h2>
         <img src="https://via.placeholder.com/457x351" width="457" height="351" alt="Добро пожаловать в Седону">
       </div>
+    </header>
+
+    <main>      
 
       <section>
-        <h2>Преимущества Седоны</h2>
+        <h1>Преимущества Седоны</h1>
 
         <p><strong>Седона — небольшой городок в Аризоне,заслуживающий большего!</strong></p>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 
-        <div>
-          <h3>Настоящий городок</h3>
-          <p>— №1 —</p>
+        <section>
+          <h2>Настоящий городок</h2>
+          <span>— №1 —</span>
           <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
           <img src="https://via.placeholder.com/800x256" width="800" height="256" alt="Городок Седона">
-        </div>
+        </section>
+        
+        <section>
+          <h2>Комфортная туристическая инфраструктура</h2>
 
-        <ul>
-          <li>
-            <img src="https://via.placeholder.com/73x72" width="73" height="72" alt="Иконка 'Дом'">
-            <h3>Жильё</h3>
-            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </li>
-          <li>
-            <img src="https://via.placeholder.com/75x70" width="75" height="70" alt="Иконка 'Бургер'">
-            <h3>Еда</h3>
-            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li>
-            <img src="https://via.placeholder.com/64x77" width="64" height="77" alt="Иконка 'Подарок'">
-            <h3>Сувениры</h3>
-            <p>Не только китайского, но и местного производства!</p>
-          </li>
-        </ul>
+          <ul>
+            <li>
+              <img src="https://via.placeholder.com/73x72" width="73" height="72" alt="Иконка 'Дом'">
+              <h3>Жильё</h3>
+              <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li>
+              <img src="https://via.placeholder.com/75x70" width="75" height="70" alt="Иконка 'Бургер'">
+              <h3>Еда</h3>
+              <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li>
+              <img src="https://via.placeholder.com/64x77" width="64" height="77" alt="Иконка 'Подарок'">
+              <h3>Сувениры</h3>
+              <p>Не только китайского, но и местного производства!</p>
+            </li>
+          </ul>
+        </section>  
 
-        <div>
-          <h3>Там есть Мост дьявола</h3>
-          <p>— №2 —</p>
+        <section>
+          <h2>Там есть Мост дьявола</h2>
+          <span>— №2 —</span>
           <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           <img src="https://via.placeholder.com/800x256" width="800" height="256" alt="Мост дьявола">
-        </div>
+        </section>
 
-        <ul>
-          <li>            
-            <h3>Небольшая площадь</h3>
-            <p>— №3 —</p>
-            <p>Все достопримечательности находятся очень близко</p>
-          </li>          
-          <li>
-            <h3>Красивая дорога</h3>
-            <p>— №4 —</p>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li>
-            <h3>Мало туристов</h3>
-            <p>— №5 —</p>
-            <p>Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-        </ul>
+        <section>
+          <h2>Удобство отдыха</h2>
+
+          <ul>
+            <li>            
+              <h3>Небольшая площадь</h3>
+              <span>— №3 —</span>
+              <p>Все достопримечательности находятся очень близко</p>
+            </li>          
+            <li>
+              <h3>Красивая дорога</h3>
+              <span>— №4 —</span>
+              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li>
+              <h3>Мало туристов</h3>
+              <span>— №5 —</span>
+              <p>Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+          </ul>
+        </section>
 
       </section>
 
       <section>
-        <h2>Заинтересовались?</h2>
+        <h1>Заинтересовались?</h1>
         <p>Укажите предполагаемые даты поездки,<br>
           и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <p>
