Выполняет третье задание

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
 
   <body>
@@ -12,7 +17,7 @@
 
       <nav>
         <a>
-          <img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип Седона">
+          <img src="img/main-logo.svg" width="138" height="70" alt="Логотип Седона">
         </a>
         <ul>
           <li><a href="#">Информация</a></li>
@@ -24,7 +29,7 @@
 
       <div>
         <h2>Приветствие</h2>
-        <img src="https://via.placeholder.com/457x351" width="457" height="351" alt="Добро пожаловать в Седону">
+        <img src="img/header-logo.svg" width="457" height="351" alt="Добро пожаловать в Седону">
       </div>
     </header>
 
@@ -33,14 +38,14 @@
       <section>
         <h1>Преимущества Седоны</h1>
 
-        <p><strong>Седона — небольшой городок в Аризоне,заслуживающий большего!</strong></p>
+        <p><strong>Седона — небольшой городок в Аризоне, заслуживающий большего!</strong></p>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 
         <section>
           <h2>Настоящий городок</h2>
           <span>— №1 —</span>
           <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-          <img src="https://via.placeholder.com/800x256" width="800" height="256" alt="Городок Седона">
+          <img src="img/features-image-town.jpg" width="800" height="256" alt="Городок Седона">
         </section>
         
         <section>
@@ -48,17 +53,17 @@
 
           <ul>
             <li>
-              <img src="https://via.placeholder.com/73x72" width="73" height="72" alt="Иконка 'Дом'">
+              <img src="img/features-icon-house.svg" width="73" height="72" alt="Иконка 'Дом'">
               <h3>Жильё</h3>
               <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
             <li>
-              <img src="https://via.placeholder.com/75x70" width="75" height="70" alt="Иконка 'Бургер'">
+              <img src="img/features-icon-food.svg" width="75" height="70" alt="Иконка 'Бургер'">
               <h3>Еда</h3>
               <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li>
-              <img src="https://via.placeholder.com/64x77" width="64" height="77" alt="Иконка 'Подарок'">
+              <img src="img/features-icon-gift.svg" width="64" height="77" alt="Иконка 'Подарок'">
               <h3>Сувениры</h3>
               <p>Не только китайского, но и местного производства!</p>
             </li>
@@ -69,7 +74,7 @@
           <h2>Там есть Мост дьявола</h2>
           <span>— №2 —</span>
           <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-          <img src="https://via.placeholder.com/800x256" width="800" height="256" alt="Мост дьявола">
+          <img src="img/features-image-bridge.jpg" width="800" height="256" alt="Мост дьявола">
         </section>
 
         <section>
@@ -104,7 +109,7 @@
           <button type="button">Поиск гостиницы в Седоне</button>
         </p>
         <!-- Здесь будет карта -->
-        <img src="https://via.placeholder.com/1199x594" width="1199" height="594" alt="Карта">
+        <img src="img/map.jpg" width="1199" height="594" alt="Карта">
       </section>
 
     </main>
@@ -134,7 +139,7 @@
       <p>
         Website by
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="https://via.placeholder.com/115x41" width="115" height="41" alt="Логотип HTML Academy">
+          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
         </a>
       </p>
     </footer>
