--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Каталог гостиниц в Седоне</title>
+
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
 
   <body>
@@ -10,13 +15,12 @@
     <header>
       <h1>Выбор гостиницы в Седоне</h1>
 
+      <a href="index.html">
+        <img src="img/main-logo.svg" width="138" height="70" alt="Логотип Седона">
+      </a>
+
       <nav>        
         <ul>
-          <li>
-            <a href="index.html">
-              <img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип Седона">
-            </a>
-          </li>
           <li>
             <a href="#">Информация</a>
           </li>
@@ -36,7 +40,7 @@
 
     <main>      
       
-      <h1>Критерии поиска гостиницы</h1>
+      <h1>Жильё в Седоне</h1>
 
       <section>
         <h2>Фильтр товаров</h2>
@@ -131,7 +135,7 @@
 
         <ul>
           <li>
-            <img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Amara Resort & Spa">
+            <img src="img/amara-resort-spa.jpg" width="135" height="90" alt="Amara Resort & Spa">
             <h2>
               <a href="#">Amara Resort & Spa</a>
             </h2>
@@ -150,7 +154,7 @@
             </div>
           </li>
           <li>
-            <img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Desert Quail Inn">
+            <img src="img/desert-quail-inn.jpg" width="135" height="90" alt="Desert Quail Inn">
             <h2>
               <a href="#">Desert Quail Inn</a>
             </h2>
@@ -169,7 +173,7 @@
             </div>
           </li>
           <li>
-            <img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Villas at Poco Diablo">
+            <img src="img/villas-at-poco-diablo.jpg" width="135" height="90" alt="Villas at Poco Diablo">
             <h2>
               <a href="#">Villas at Poco Diablo</a>
             </h2>
@@ -217,7 +221,7 @@
       <p>
         Website by
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="https://via.placeholder.com/115x41" width="115" height="41" alt="Логотип HTML Academy">
+          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
         </a>
       </p>
     </footer>
