--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body class="page-body container">
-
+  <body>
+    <div class="container">
     <header class="main-header ">
       <h1 class="d_none">Добро пожаловать в Седону</h1>
 
@@ -30,9 +30,9 @@
         </ul>
       </nav>
 
-      <div class="header-logo">
-        <h2 class="header-title d_none">Приветствие</h2>
-        <img src="img/header-logo.svg" width="457" height="351" alt="Добро пожаловать в Седону" class="logo-img">
+      <div class="banner">
+        <h2 class="banner-title d_none">Приветствие</h2>
+        <img src="img/banner-logo.svg" width="457" height="351" alt="Добро пожаловать в Седону" class="banner-img">
       </div>
     </header>
 
@@ -75,8 +75,8 @@
 
         <section class="feature">
           <h2>Там есть Мост дьявола</h2>
-          <span>— №2 —</span>
-          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          <span class="number">— №2 —</span>
+          <p class="text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           <img src="img/features-image-bridge.jpg" width="800" height="256" alt="Мост дьявола">
         </section>
 
@@ -86,18 +86,18 @@
           <ul class="features-rest-list">
             <li class="features-rest-item">            
               <h3 class="title">Небольшая площадь</h3>
-              <span>— №3 —</span>
+              <span class="number">— №3 —</span>
               <p class="text">Все достопримечательности находятся очень близко</p>
             </li>          
             <li class="features-rest-item">
               <h3 class="title">Красивая дорога</h3>
-              <span>— №4 —</span>
-              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <span class="number">— №4 —</span>
+              <p class="text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="features-rest-item">
               <h3 class="title">Мало туристов</h3>
-              <span>— №5 —</span>
-              <p>Большинство едет в Гранд Каньон и толпится там</p>
+              <span class="number">— №5 —</span>
+              <p class="text">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
           </ul>
         </section>
@@ -144,11 +144,11 @@
 
       <p class="footer-copyright">
         Website by
-        <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer-button">
+        <a href="https://htmlacademy.ru/intensive/htmlcss" class="copyright-link">
           <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy" class="footer-logo">
         </a>
       </p>
     </footer>
-
+  </div>
   </body>
 </html>
