--- a/5/index.html
+++ b/5/index.html
@@ -14,8 +14,8 @@
     <base href="https://htmlacademy-htmlcss.github.io/1707573-sedona-30/5/">
 </head>
 
-  <body class="page-body container">
-
+  <body>
+    <div class="container">
     <header class="main-header ">
       <h1 class="d_none">Добро пожаловать в Седону</h1>
 
@@ -31,9 +31,9 @@
         </ul>
       </nav>
 
-      <div class="header-logo">
-        <h2 class="header-title d_none">Приветствие</h2>
-        <img src="img/header-logo.svg" width="457" height="351" alt="Добро пожаловать в Седону" class="logo-img">
+      <div class="banner">
+        <h2 class="banner-title d_none">Приветствие</h2>
+        <img src="img/banner-logo.svg" width="457" height="351" alt="Добро пожаловать в Седону" class="banner-img">
       </div>
     </header>
 
@@ -76,8 +76,8 @@
 
         <section class="feature">
           <h2>Там есть Мост дьявола</h2>
-          <span>— №2 —</span>
-          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          <span class="number">— №2 —</span>
+          <p class="text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           <img src="img/features-image-bridge.jpg" width="800" height="256" alt="Мост дьявола">
         </section>
 
@@ -87,18 +87,18 @@
           <ul class="features-rest-list">
             <li class="features-rest-item">            
               <h3 class="title">Небольшая площадь</h3>
-              <span>— №3 —</span>
+              <span class="number">— №3 —</span>
               <p class="text">Все достопримечательности находятся очень близко</p>
             </li>          
             <li class="features-rest-item">
               <h3 class="title">Красивая дорога</h3>
-              <span>— №4 —</span>
-              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <span class="number">— №4 —</span>
+              <p class="text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="features-rest-item">
               <h3 class="title">Мало туристов</h3>
-              <span>— №5 —</span>
-              <p>Большинство едет в Гранд Каньон и толпится там</p>
+              <span class="number">— №5 —</span>
+              <p class="text">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
           </ul>
         </section>
@@ -145,11 +145,11 @@
 
       <p class="footer-copyright">
         Website by
-        <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer-button">
+        <a href="https://htmlacademy.ru/intensive/htmlcss" class="copyright-link">
           <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy" class="footer-logo">
         </a>
       </p>
     </footer>
-
+  </div>
   </body>
 </html>
