Исправляет сетку на флексах для главной страницы

--- a/index.html
+++ b/index.html
@@ -150,17 +150,17 @@
                   <label class="older-label" for="number-older">Взрослые:</label>
   
                   <div class="older-button">
-                    <a href="#number-older" class="older-number-minus">
+                    <button type="button" class="older-number-minus">
                       <svg width="12" height="3" viewBox="0 0 12 3" fill="none" xmlns="http://www.w3.org/2000/svg" class="older-minus">
                         <rect width="12" height="3" fill="#A9A9A9"/>
                       </svg>
-                    </a>
+                    </button>
                     <input class="older-label-numbers" type="text" name="people" id="number-older" value="2">
-                    <a href="#number-older" class="older-number-plus">
+                    <button type="button" class="older-number-plus">
                       <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg" class="older-plus">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23086 6.76932V11H6.76932V6.76932H11V4.23086H6.76932V0H4.23085V4.23086H0V6.76932H4.23086Z" fill="#A9A9A9"/>
                       </svg>
-                    </a>
+                    </button>
                   </div>
                 </div>
     
@@ -168,17 +168,17 @@
                   <label class="kids-label" for="number-kids">Дети:</label>
                   
                   <div class="kids-button">
-                    <a href="#number-kids" class="kids-number-minus">
+                    <button type="button" class="kids-number-minus">
                       <svg width="12" height="3" viewBox="0 0 12 3" fill="none" xmlns="http://www.w3.org/2000/svg" class="kids-minus">
                         <rect width="12" height="3" fill="#A9A9A9"/>
                       </svg>
-                    </a>
+                    </button>
                     <input class="kids-label-numbers" type="text" name="people" id="number-kids" value="0">
-                    <a href="#number-kids" class="kids-number-plus">
+                    <button type="button" class="kids-number-plus">
                       <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg" class="kids-plus">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23086 6.76932V11H6.76932V6.76932H11V4.23086H6.76932V0H4.23085V4.23086H0V6.76932H4.23086Z" fill="#A9A9A9"/>
                       </svg>
-                    </a>
+                    </button>
                   </div>
                 </div>
               </div>
