Декоративные элементы на главной странице

--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
   <body class="inner-page">
     <div class="container shadow">
       <header>
-        <h1 class="d_none">Выбор гостиницы в Седоне</h1>
+        <h1 class="visually-hidden">Выбор гостиницы в Седоне</h1>
 
         <a href="index.html" class="main-header-logo">
           <img src="img/main-logo.svg" width="138" height="70" alt="Логотип Седона">
@@ -43,11 +43,11 @@
 
       <main>      
         
-        <h1 class="d_none">Жильё в Седоне</h1>
+        <h1 class="visually-hidden">Жильё в Седоне</h1>
 
         <section class="hotels-filter">
           <div class="inner">
-            <h2 class="d_none">Фильтр товаров</h2>
+            <h2 class="visually-hidden">Фильтр товаров</h2>
 
             <form method="get" action="https://echo.htmlacademy.ru" class="filters">
 
@@ -55,15 +55,15 @@
                 <legend class="title">Инфраструктура:</legend>
 
                 <p class="checkbox-outer">
-                  <input type="checkbox" name="swimming-pool" id="filter-swimming-pool" checked>
+                  <input type="checkbox" name="swimming-pool" class="visually-hidden" id="filter-swimming-pool" checked>
                   <label for="filter-swimming-pool" class="checkbox-name">Бассейн</label>
                 </p>
                 <p class="checkbox-outer">
-                  <input type="checkbox" name="parking" id="filter-parking">
+                  <input type="checkbox" name="parking" class="visually-hidden" id="filter-parking">
                   <label for="filter-parking" class="checkbox-name">Парковка</label>
                 </p>
                 <p class="checkbox-outer">
-                  <input type="checkbox" name="wi-fi" id="filter-wi-fi">
+                  <input type="checkbox" name="wi-fi" class="visually-hidden" id="filter-wi-fi">
                   <label for="filter-wi-fi" class="checkbox-name">Wi-Fi</label>
                 </p>
               </fieldset>
@@ -72,15 +72,15 @@
                 <legend class="title">Тип жилья:</legend>
 
                 <p class="checkbox-outer">
-                  <input type="checkbox" name="hostel" id="filter-hostel" checked>
+                  <input type="checkbox" name="hostel" class="visually-hidden" id="filter-hostel" checked>
                   <label for="filter-hostel" class="checkbox-name">Гостиница</label>
                 </p>
                 <p class="checkbox-outer">
-                  <input type="checkbox" name="hotel" id="filter-hotel" checked>
+                  <input type="checkbox" name="hotel" class="visually-hidden" id="filter-hotel" checked>
                   <label for="filter-hotel" class="checkbox-name">Отель</label>
                 </p>
                 <p class="checkbox-outer">
-                  <input type="checkbox" name="apartments" id="filter-apartments" checked>
+                  <input type="checkbox" name="apartments" class="visually-hidden" id="filter-apartments" checked>
                   <label for="filter-apartments" class="checkbox-name">Апартаменты</label>
                 </p>
               </fieldset>
@@ -115,7 +115,7 @@
 
 
         <section class="results">
-            <h1 class="d_none">Результаты поиска</h1>
+            <h1 class="visually-hidden">Результаты поиска</h1>
 
             <div class="category">
               <div class="inner">
@@ -270,7 +270,7 @@
 
       <footer class="main-footer">
         <section class="footer-contacts">
-          <h2 class="d_none">Как с нами связаться</h2>
+          <h2 class="visually-hidden">Как с нами связаться</h2>
           <p class="footer-info">
             #visitsedona<br>
             Тел: <a href="tel:+74956660166" class="footer-phone">+7(495) 666-01-66</a>
@@ -278,23 +278,23 @@
         </section>
 
         <section class="footer-social">
-          <h2 class="d_none">Социальные сети</h2>
+          <h2 class="visually-hidden">Социальные сети</h2>
           <ul class="social-list">
             <li>
               <a href="#" class="social-button">
-                <span class="d_none">Твиттер</span>
+                <span class="visually-hidden">Твиттер</span>
                 <svg width="17" height="17" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10.95 1.14a3.1 3.1 0 013.58 1.18c.67-.23 1.33-.48 2-.7a2.34 2.34 0 01-.85 1.76c.69.17 1.3-.49 1.3-.49-.16 1-1 1.79-1.56 2.03C15.2 11.67 12.25 16.13 5.34 16H4.9c-.41 0-4.17-.46-4.9-1.89 2.27.2 3.9-.42 4.7-1.18-.97-.3-2.69-.47-2.99-2.95.35.11.57.23 1.2.12C1.7 9.25.36 8.53.44 6.33a1.9 1.9 0 001.34.47c-.7-.24-1.97-3.36-.9-4.95 1.82 1.85 3.74 3.6 7.16 3.77.2-2.29 1.13-3.83 2.9-4.48z" fill="#fff"/></svg>
               </a>
             </li>
             <li>
               <a href="#" class="social-button">
-                <span class="d_none">Фейсбук</span>
+                <span class="visually-hidden">Фейсбук</span>
                 <svg width="12" height="22" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 4V0H8a4 4 0 00-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"/></svg>
               </a>
             </li>
             <li>
               <a href="#" class="social-button">
-                <span class="d_none">Ютуб</span>
+                <span class="visually-hidden">Ютуб</span>
                 <svg width="20" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h14a3 3 0 013 3v10a3 3 0 01-3 3H3a3 3 0 01-3-3V3a3 3 0 013-3zm3.03 4v8L15 8 6.03 4z" fill="#fff"/></svg>
               </a>
             </li>
