--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container shadow">
       <header class="main-header ">
-        <h1 class="d_none">Добро пожаловать в Седону</h1>
+        <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
 
         <nav class="main-navigation">
           <a class="main-header-logo">
@@ -31,14 +31,14 @@
         </nav>
 
         <div class="banner">
-          <h2 class="banner-title d_none">Приветствие</h2>
+          <h2 class="banner-title visually-hidden">Приветствие</h2>
           <img src="img/banner-logo.svg" width="457" height="351" alt="Добро пожаловать в Седону" class="banner-img">
         </div>
       </header>
 
       <main>
         <section class="features">
-          <h1 class="d_none">Преимущества Седоны</h1>
+          <h1 class="visually-hidden">Преимущества Седоны</h1>
 
           <p class="subtitle"><strong>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</strong></p>
           <p class="description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -55,7 +55,7 @@
           </section>
           
           <section class="features-infrastructure">
-            <h2 class="d_none">Комфортная туристическая инфраструктура</h2>
+            <h2 class="visually-hidden">Комфортная туристическая инфраструктура</h2>
 
             <ul class="features-list">
               <li class="features-item">
@@ -89,7 +89,7 @@
           </section>
 
           <section class="features-rest">
-            <h2 class="d_none">Удобство отдыха</h2>
+            <h2 class="visually-hidden">Удобство отдыха</h2>
 
             <ul class="features-rest-list">
               <li class="features-rest-item">            
@@ -194,7 +194,7 @@
 
       <footer class="main-footer">
         <section class="footer-contacts">
-          <h2 class="d_none">Как с нами связаться</h2>
+          <h2 class="visually-hidden">Как с нами связаться</h2>
           <p class="footer-info">
             #visitsedona<br>
             Тел: <a href="tel:+74956660166" class="footer-phone">+7(495) 666-01-66</a>
@@ -202,23 +202,23 @@
         </section>
 
         <section class="footer-social">
-          <h2 class="d_none">Социальные сети</h2>
+          <h2 class="visually-hidden">Социальные сети</h2>
           <ul class="social-list">
             <li>
               <a href="#" class="social-button">
-                <span class="d_none">Твиттер</span>
+                <span class="visually-hidden">Твиттер</span>
                 <svg width="17" height="17" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10.95 1.14a3.1 3.1 0 013.58 1.18c.67-.23 1.33-.48 2-.7a2.34 2.34 0 01-.85 1.76c.69.17 1.3-.49 1.3-.49-.16 1-1 1.79-1.56 2.03C15.2 11.67 12.25 16.13 5.34 16H4.9c-.41 0-4.17-.46-4.9-1.89 2.27.2 3.9-.42 4.7-1.18-.97-.3-2.69-.47-2.99-2.95.35.11.57.23 1.2.12C1.7 9.25.36 8.53.44 6.33a1.9 1.9 0 001.34.47c-.7-.24-1.97-3.36-.9-4.95 1.82 1.85 3.74 3.6 7.16 3.77.2-2.29 1.13-3.83 2.9-4.48z" fill="#fff"/></svg>
               </a>
             </li>
             <li>
               <a href="#" class="social-button">
-                <span class="d_none">Фейсбук</span>
+                <span class="visually-hidden">Фейсбук</span>
                 <svg width="12" height="22" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 4V0H8a4 4 0 00-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"/></svg>
               </a>
             </li>
             <li>
               <a href="#" class="social-button">
-                <span class="d_none">Ютуб</span>
+                <span class="visually-hidden">Ютуб</span>
                 <svg width="20" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h14a3 3 0 013 3v10a3 3 0 01-3 3H3a3 3 0 01-3-3V3a3 3 0 013-3zm3.03 4v8L15 8 6.03 4z" fill="#fff"/></svg>
               </a>
             </li>
