Декоративные элементы на внутренней странице

--- a/catalog.html
+++ b/catalog.html
@@ -55,15 +55,15 @@
                 <legend class="title">Инфраструктура:</legend>
 
                 <p class="checkbox-outer">
-                  <input type="checkbox" name="swimming-pool" class="visually-hidden" id="filter-swimming-pool" checked>
+                  <input type="checkbox" name="swimming-pool" class="visually-hidden filter-checkbox" id="filter-swimming-pool" checked>
                   <label for="filter-swimming-pool" class="checkbox-name">Бассейн</label>
                 </p>
                 <p class="checkbox-outer">
-                  <input type="checkbox" name="parking" class="visually-hidden" id="filter-parking">
+                  <input type="checkbox" name="parking" class="visually-hidden filter-checkbox" id="filter-parking">
                   <label for="filter-parking" class="checkbox-name">Парковка</label>
                 </p>
                 <p class="checkbox-outer">
-                  <input type="checkbox" name="wi-fi" class="visually-hidden" id="filter-wi-fi">
+                  <input type="checkbox" name="wi-fi" class="visually-hidden filter-checkbox" id="filter-wi-fi">
                   <label for="filter-wi-fi" class="checkbox-name">Wi-Fi</label>
                 </p>
               </fieldset>
@@ -72,15 +72,15 @@
                 <legend class="title">Тип жилья:</legend>
 
                 <p class="checkbox-outer">
-                  <input type="checkbox" name="hostel" class="visually-hidden" id="filter-hostel" checked>
+                  <input type="checkbox" name="hostel" class="visually-hidden filter-checkbox" id="filter-hostel" checked>
                   <label for="filter-hostel" class="checkbox-name">Гостиница</label>
                 </p>
                 <p class="checkbox-outer">
-                  <input type="checkbox" name="hotel" class="visually-hidden" id="filter-hotel" checked>
+                  <input type="checkbox" name="hotel" class="visually-hidden filter-checkbox" id="filter-hotel" checked>
                   <label for="filter-hotel" class="checkbox-name">Отель</label>
                 </p>
                 <p class="checkbox-outer">
-                  <input type="checkbox" name="apartments" class="visually-hidden" id="filter-apartments" checked>
+                  <input type="checkbox" name="apartments" class="visually-hidden filter-checkbox" id="filter-apartments" checked>
                   <label for="filter-apartments" class="checkbox-name">Апартаменты</label>
                 </p>
               </fieldset>
@@ -102,8 +102,8 @@
                     <div class="bar"></div>
                   </div>
               
-                  <div class="range range1"></div>
-                  <div class="range range2"></div>
+                  <div class="range range1" tabindex="0"></div>
+                  <div class="range range2" tabindex="0"></div>
                 </div>
 
                 <button type="submit" class="button-show">Показать</button>
