Оживление интерактивных элементов и Добавление интерактивной карты

--- a/catalog.html
+++ b/catalog.html
@@ -77,7 +77,7 @@
                 </p>
                 <p class="checkbox-outer">
                   <input type="checkbox" name="hotel" class="visually-hidden filter-checkbox" id="filter-hotel" checked>
-                  <label for="filter-hotel" class="checkbox-name">Отель</label>
+                  <label for="filter-hotel" class="checkbox-name">Мотель</label>
                 </p>
                 <p class="checkbox-outer">
                   <input type="checkbox" name="apartments" class="visually-hidden filter-checkbox" id="filter-apartments" checked>
@@ -106,7 +106,9 @@
                   <div class="range range2" tabindex="0"></div>
                 </div>
 
-                <button type="submit" class="button-show" aria-label="Показать результаты поиска жилья">Показать</button>
+                <div class="button-show-outer">
+                  <button type="submit" class="button-show" aria-label="Показать результаты поиска жилья">Показать</button>
+                </div>                
               </fieldset>
               
             </form>
@@ -317,6 +319,8 @@
           </a>
         </p>
       </footer>
-    </div>  
+    </div>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
