Добавил префиксы, минифицировал, завершил проект

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="apple-touch-icon" href="img/favicon/180.png">
     <link rel="manifest" href="manifest.webmanifest">
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
 
   <body>
@@ -125,7 +125,7 @@
           <div class="map-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d181450.30687610453!2d-111.90186923675502!3d34.81572780699817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sua!4v1615111938368!5m2!1sru!2sua" width="1200" height="594" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           
-            <div class="travel-hotels">
+            <div class="travel-hotels fallback">
               <form class="travel-form" method="post" action="https://echo.htmlacademy.ru">
                   
                 <div class="date-in">
@@ -245,7 +245,7 @@
       </footer>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 
 </html>
