--- a/catalog.html
+++ b/catalog.html
@@ -9,8 +9,8 @@
     <link rel="apple-touch-icon" href="img/favicon/180.png">
     <link rel="manifest" href="manifest.webmanifest">
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
 
   <body class="inner-page">
@@ -102,8 +102,8 @@
                     <div class="bar"></div>
                   </div>
               
-                  <div class="range range1" tabindex="0"></div>
-                  <div class="range range2" tabindex="0"></div>
+                  <div class="range range1" tabindex="0" aria-label="Указать минимальную цену"></div>
+                  <div class="range range2" tabindex="0" aria-label="Указать максимальную цену"></div>
                 </div>
 
                 <div class="button-show-outer">
@@ -321,6 +321,6 @@
       </footer>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
