Внес правки в финальную версию проекта

--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
 
       <main>
         <section class="features">
-          <h1 class="visually-hidden">Преимущества Седоны</h1>
+          <h2 class="visually-hidden">Преимущества Седоны</h2>
 
-          <p class="subtitle"><strong>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</strong></p>
+          <p class="subtitle">
+            <strong class="bold">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</strong>
+          </p>
           <p class="description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 
           <section class="feature">
             <div class="feature-text">
-              <h2 class="heading">Настоящий<br>городок</h2>
+              <h3 class="heading">Настоящий<br>городок</h3>
               <span class="number">— №1 —</span>
               <p class="text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
@@ -78,7 +80,7 @@
 
           <section class="feature feature-reverse">
             <div class="feature-text">
-              <h2 class="heading">Там есть<br>Мост дьявола</h2>
+              <h3 class="heading">Там есть<br>Мост дьявола</h3>
               <span class="number">— №2 —</span>
               <p class="text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
@@ -114,7 +116,7 @@
 
         <section class="appointment">
           <div class="appointment-content">
-            <h1 class="heading">Заинтересовались?</h1>
+            <h2 class="heading">Заинтересовались?</h2>
             <p class="appointment-info">Укажите предполагаемые даты поездки,<br>
               и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <p class="button-outer">
